--- a/src/tree/templates/style.less
+++ b/src/tree/templates/style.less
@@ -8,6 +8,7 @@
 
         &.closed {
             .zt-node-title {
+                font-size: 12px;
                 font-weight: normal;
                 color: gray;
             }
