--- a/src/tree/templates/style.less
+++ b/src/tree/templates/style.less
@@ -15,28 +15,81 @@ li.fancytree-animating {
         vertical-align: middle;
     }
 
+    span.fancytree-icon {
+        vertical-align: middle;
+    }
+
     span.fancytree-title {
-        color: #d1d5da;
-
-        &:hover {
-            color: #e1e4e8;
-            background-color: rgb(36 145 255 / 20%);
-        }
-    }
-
-    &.tab-active {
-        font-weight: bold;
-    }
-
-    span.zt-node {
         position: relative;
+        color: #2a2d34;
 
         &.closed {
+            .zt-node-alias {
+                color: gray;
+            }
+
             .zt-node-title {
                 font-size: 12px;
                 font-weight: normal;
                 color: gray;
             }
+        }
+
+        &:hover {
+            //color: #e1e4e8;
+            //background-color: rgb(36 145 255 / 20%);
+        }
+
+        .zt-node-splitter {
+            color: #d1d5da;
+        }
+
+        span.zt-node-alias {
+            vertical-align: middle;
+        }
+    }
+
+    &.fancytree-active span.fancytree-title {
+        //color: inherit !important;
+        //background-color: rgba(59 106 247 80 2%) !important;
+        border-radius: 5px;
+
+        //&.closed {
+        //    .zt-node-alias {
+        //        color: white;
+        //    }
+        //
+        //    .zt-node-title {
+        //        color: white;
+        //    }
+        //}
+    }
+
+    .zt-node-title {
+        display: inline-block;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        vertical-align: middle;
+
+        &.alias {
+            color: #6a737d;
+        }
+    }
+
+    &.tab-active {
+        font-weight: bold;
+
+        .zt-node-title {
+            color: #3465f6;
+
+            &.alias {
+                color: #89a6fa;
+            }
+        }
+
+        .zt-node-alias {
+            color: #3465f6;
         }
     }
 
@@ -59,13 +112,41 @@ li.fancytree-animating {
 }
 
 body {
+    position: relative;
     margin: 0;
-    font-family: 'SF Mono', Monaco, Menlo, Courier, monospace;
-    background: #1f2428;
+    overflow-x: hidden;
+    font-family: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+        Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
+        'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+
+    #header {
+        position: fixed;
+        top: 0;
+        z-index: 3;
+        width: 100%;
+        height: 50px;
+        background: rgb(31 36 40);
+        box-shadow: 0 1px 2px 0 rgb(31 36 40 / 3%), 0 1px 6px -1px rgb(31 36 40 / 2%),
+            0 2px 4px 0 rgb(31 36 40 / 2%);
+    }
+
+    #tree {
+        margin-top: 50px;
+        margin-bottom: 80px;
+    }
 
     ul.fancytree-container {
         padding: 8px;
-        background-color: #1f2428;
+        //background-color: #1f2428;
         border: 0;
+    }
+
+    #footer {
+        position: fixed;
+        bottom: 0;
+        z-index: 3;
+        width: 100%;
+        height: 40px;
+        background: rgb(31 36 40);
     }
 }
