--- a/src/tree/templates/style.less
+++ b/src/tree/templates/style.less
@@ -10,6 +10,10 @@ li.fancytree-animating {
     height: 22px;
     line-height: 22px;
 
+    span.fancytree-custom-icon {
+        margin-left: 0;
+    }
+
     img.fancytree-icon,
     span.fancytree-expander {
         vertical-align: middle;
@@ -149,7 +153,7 @@ body {
         background: rgb(242 244 245);
     }
 
-    #tree {
+    .tree-container {
         margin-top: 50px;
         margin-bottom: 80px;
     }
