[style] add dark mode

--- a/src/tree/features/tab-master-tree/style.less
+++ b/src/tree/features/tab-master-tree/style.less
@@ -1,278 +1,53 @@
 @import url('../../../styles/iconfont/iconfont.css');
-@import url('./dark-mode.less');
 
-@expander-color: #000;
-@indent-line-color: #d9d9d9;
-@title-color: #2a2d34;
-@title-with-alias-color: #33373d;
-@title-closed-color: gray;
-@alias-closed-color: #a4a4a4;
-@splitter-color: #d1d5da;
-@title-active-color: #000;
-@alias-active-color: #000;
-@title-with-alias-active-color: #b6b6b6;
-@title-tab-active-color: #3465f6;
-@title-with-alias-tab-active-color: #89a6fa;
+:root {
+    --expander-color: #000;
+    --indent-line-color: #d9d9d9;
+    --title-color: #2a2d34;
+    --title-with-alias-color: #33373d;
+    --title-closed-color: gray;
+    --alias-closed-color: #a4a4a4;
+    --splitter-color: #d1d5da;
+    --title-active-color: #000;
+    --alias-active-color: #000;
+    --title-active-bg-color: #3465f6;
+    --title-with-alias-active-color: #b6b6b6;
+    --title-tab-active-color: #3465f6;
+    --title-with-alias-tab-active-color: #89a6fa;
+    --title-submatch-color: #7a7a7a;
+    --title-match-color: black;
+    --title-mismatch-color: #d9d9d9;
+    --header-bg-color: rgb(242 244 245);
+    --header-shadow-color: rgb(172 172 172 / 95%);
+    --footer-bg-color: rgb(242 244 245);
+    --footer-border-top-color: #cecece;
+    --content-bg-color: #fff;
+    --title-hover-bg-color: #fff;
+}
 
-@header-bg-color: rgb(242 244 245);
-@header-shadow-color: rgb(172 172 172 / 95%);
-@footer-bg-color: rgb(242 244 245);
-@content-bg-color: #fff;
-
-#tree {
-    // search Start
-    &.fancytree-ext-filter-dimm span.fancytree-node {
-        &.fancytree-submatch span.fancytree-title {
-            color: #7a7a7a;
-        }
-
-        &.fancytree-match span.fancytree-title {
-            font-weight: normal;
-            color: black;
-        }
-
-        &.fancytree-hide span.fancytree-title {
-            font-weight: lighter;
-            color: #d9d9d9;
-        }
-    }
-
-    &.fancytree-ext-filter-hide span.fancytree-node.fancytree-hide {
-        display: none;
-    }
-    // search END
-
-    ul.fancytree-container {
-        overflow-x: hidden;
-        overflow-y: auto;
-
-        li {
-            background: 0;
-        }
-
-        ul {
-            padding-left: 20px;
-        }
-    }
-
-    ul[role='group'] {
-        position: relative;
-
-        &::before {
-            position: absolute;
-            top: 0;
-            left: 6px;
-            height: 100%;
-            content: '';
-            border-left: 1px solid #d9d9d9;
-        }
-    }
-
-    li.fancytree-animating {
-        position: inherit;
-    }
-
-    span.fancytree-node {
-        position: relative;
-        display: inline-block;
-        margin-top: 0;
-        line-height: 22px;
-
-        // expander start
-        span.fancytree-expander {
-            position: relative;
-            height: 100%;
-            // stylelint-disable-next-line font-family-no-missing-generic-family-keyword
-            font-family: iconfont !important;
-            color: @expander-color;
-            vertical-align: middle;
-            background: 0;
-        }
-
-        &.fancytree-exp-c,
-        &.fancytree-exp-cl {
-            span.fancytree-expander::before {
-                content: '\e722';
-            }
-        }
-
-        &.fancytree-exp-e,
-        &.fancytree-exp-el {
-            span.fancytree-expander::before {
-                content: '\e687';
-            }
-        }
-
-        &.fancytree-exp-n,
-        &.fancytree-exp-nl {
-            span.fancytree-expander {
-                &::before {
-                    position: absolute;
-                    top: -13px;
-                    bottom: -11px;
-                    margin-inline-start: -1px;
-                    content: '';
-                    border-inline-end: 1px solid @indent-line-color;
-                    inset-inline-end: 9px;
-                }
-
-                &::after {
-                    position: absolute;
-                    left: 6px;
-                    width: 9px;
-                    content: '';
-                    border-bottom: 1px solid @indent-line-color;
-                }
-            }
-        }
-
-        &.fancytree-exp-nl {
-            span.fancytree-expander {
-                &::before {
-                    position: absolute;
-                    bottom: auto;
-                    height: 13px;
-                    margin-inline-start: -1px;
-                    content: '';
-                    border-inline-end: 1px solid @indent-line-color;
-                    inset-inline-end: 9px;
-                }
-            }
-        }
-
-        // expander end
-        // icon start
-        span.fancytree-custom-icon {
-            line-height: 16px;
-            text-align: center;
-
-            .fancytree-icon {
-                margin-left: 0;
-            }
-        }
-
-        i.fancytree-icon.note {
-            display: inline-block;
-            width: 12px;
-            height: 12px;
-            background-color: rgb(34 190 107);
-            border-radius: 6px;
-        }
-
-        .fancytree-icon {
-            vertical-align: middle;
-        }
-        // icon end
-
-        span.fancytree-title {
-            padding: 0 3px;
-            margin-left: 6px;
-            font-size: 11px;
-            color: @title-color;
-
-            .zt-node-title {
-                display: inline-block;
-                white-space: nowrap;
-                vertical-align: middle;
-
-                &.alias {
-                    color: @title-with-alias-color;
-                }
-            }
-
-            &.closed {
-                .zt-node-alias {
-                    color: @alias-closed-color;
-                }
-
-                .zt-node-title {
-                    font-weight: normal;
-                    color: @title-closed-color;
-                }
-            }
-
-            &:hover {
-                //color: #e1e4e8;
-                //background-color: rgb(36 145 255 / 20%);
-            }
-
-            .zt-node-splitter {
-                color: @splitter-color;
-            }
-
-            span.zt-node-alias {
-                font-weight: bold;
-                vertical-align: middle;
-            }
-        }
-        // node-active
-        &.fancytree-active span.fancytree-title {
-            border-radius: 5px;
-            outline: 0;
-
-            &.closed {
-                .zt-node-alias {
-                    color: @alias-active-color;
-                }
-
-                .zt-node-title.alias {
-                    color: @title-with-alias-active-color;
-                }
-            }
-
-            .zt-node-title {
-                color: @title-active-color;
-            }
-        }
-
-        &.tab-active {
-            .fancytree-title {
-                font-weight: bold;
-                color: @title-tab-active-color;
-            }
-
-            .zt-node-title.alias {
-                color: @title-with-alias-tab-active-color;
-            }
-
-            &.fancytree-active {
-                .zt-node-title {
-                    color: white;
-
-                    &.alias {
-                        font-weight: normal;
-                        color: white;
-                    }
-                }
-
-                .zt-node-alias {
-                    color: white;
-                }
-            }
-        }
-
-        .zt-node-button-group {
-            position: absolute;
-            top: 0;
-            right: 0;
-            display: none;
-            height: 22px;
-            padding-left: 15px;
-            line-height: 22px;
-            //background:  linear-gradient(to left, rgb(255 255 255 / 100%) 75%, rgb(255 255 255 / 50%), rgb(255 255 255 / 0%));
-
-            .zt-node-btn {
-                vertical-align: middle;
-                cursor: pointer;
-            }
-        }
-
-        &:hover {
-            .zt-node-button-group {
-                display: inline-block;
-            }
-        }
-    }
+:root[theme='dark-mode'] {
+    --expander-color: #8d8e9a;
+    --indent-line-color: rgb(41 41 43);
+    --title-color: rgb(242 242 242);
+    --title-with-alias-color: #33373d;
+    --title-closed-color: rgb(130 133 140);
+    --alias-closed-color: #a4a4a4;
+    --splitter-color: #d1d5da;
+    --title-active-color: rgb(242 242 242);
+    --alias-active-color: rgb(242 242 242);
+    --title-active-bg-color: #3465f6;
+    --title-with-alias-active-color: #b6b6b6;
+    --title-tab-active-color: #3465f6;
+    --title-with-alias-tab-active-color: #89a6fa;
+    --title-submatch-color: #7a7a7a;
+    --title-match-color: black;
+    --title-mismatch-color: #d9d9d9;
+    --header-bg-color: #18191b;
+    --header-shadow-color: rgb(172 172 172 / 95%);
+    --footer-bg-color: rgb(31 32 34);
+    --footer-border-top-color: rgb(31 32 34);
+    --content-bg-color: #18191b;
+    --title-hover-bg-color: rgb(41 39 42);
 }
 
 body {
@@ -281,7 +56,7 @@ body {
     font-family: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
         Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
         'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-    background-color: @content-bg-color;
+    background-color: var(--content-bg-color);
 
     .app {
         position: relative;
@@ -295,14 +70,14 @@ body {
         height: 50px;
         padding: 0 10px;
         line-height: 50px;
-        background: @header-bg-color;
-        box-shadow: 0 0 5px @header-shadow-color;
+        background: var(--header-bg-color);
+        box-shadow: 0 0 5px --var(header-shadow-color);
     }
 
     ul.fancytree-container {
         padding: 8px;
         margin-top: 50px;
-        background-color: @content-bg-color;
+        background-color: var(--content-bg-color);
         border: 0;
         outline: 0;
     }
@@ -313,7 +88,276 @@ body {
         z-index: 9;
         width: 100%;
         height: 40px;
-        background: rgb(242 244 245);
-        border-top: 1px solid #cecece;
+        background: var(--footer-bg-color);
+        border-top: 1px solid var(--footer-border-top-color);
+    }
+
+    #tree {
+        // search Start
+        &.fancytree-ext-filter-dimm span.fancytree-node {
+            &.fancytree-submatch span.fancytree-title {
+                color: var(--title-submatch-color);
+            }
+
+            &.fancytree-match span.fancytree-title {
+                font-weight: normal;
+                color: var(--title-match-color);
+            }
+
+            &.fancytree-hide span.fancytree-title {
+                font-weight: lighter;
+                color: var(--title-mismatch-color);
+            }
+        }
+
+        &.fancytree-ext-filter-hide span.fancytree-node.fancytree-hide {
+            display: none;
+        }
+        // search END
+
+        ul.fancytree-container {
+            overflow-x: hidden;
+            overflow-y: auto;
+
+            li {
+                background: 0;
+            }
+
+            ul {
+                padding-left: 20px;
+            }
+        }
+
+        ul[role='group'] {
+            position: relative;
+
+            &::before {
+                position: absolute;
+                top: 0;
+                left: 6px;
+                height: 100%;
+                content: '';
+                border-left: 1px solid var(--indent-line-color);
+            }
+        }
+
+        li.fancytree-animating {
+            position: inherit;
+        }
+
+        span.fancytree-node {
+            position: relative;
+            display: inline-block;
+            margin-top: 0;
+            line-height: 22px;
+
+            // expander start
+            span.fancytree-expander {
+                position: relative;
+                height: 100%;
+                // stylelint-disable-next-line font-family-no-missing-generic-family-keyword
+                font-family: iconfont !important;
+                color: var(--expander-color);
+                vertical-align: middle;
+                background: 0;
+            }
+
+            &.fancytree-exp-c,
+            &.fancytree-exp-cl {
+                span.fancytree-expander::before {
+                    content: '\e722';
+                }
+            }
+
+            &.fancytree-exp-e,
+            &.fancytree-exp-el {
+                span.fancytree-expander::before {
+                    content: '\e687';
+                }
+            }
+
+            &.fancytree-exp-n,
+            &.fancytree-exp-nl {
+                span.fancytree-expander {
+                    &::before {
+                        position: absolute;
+                        top: -13px;
+                        bottom: -11px;
+                        margin-inline-start: -1px;
+                        content: '';
+                        border-inline-end: 1px solid var(--indent-line-color);
+                        inset-inline-end: 9px;
+                    }
+
+                    &::after {
+                        position: absolute;
+                        left: 6px;
+                        width: 9px;
+                        content: '';
+                        border-bottom: 1px solid var(--indent-line-color);
+                    }
+                }
+            }
+
+            &.fancytree-exp-nl {
+                span.fancytree-expander {
+                    &::before {
+                        position: absolute;
+                        bottom: auto;
+                        height: 13px;
+                        margin-inline-start: -1px;
+                        content: '';
+                        border-inline-end: 1px solid var(--indent-line-color);
+                        inset-inline-end: 9px;
+                    }
+                }
+            }
+
+            // expander end
+            // icon start
+            span.fancytree-custom-icon {
+                line-height: 16px;
+                text-align: center;
+
+                .fancytree-icon {
+                    margin-left: 0;
+                }
+            }
+
+            &.closed {
+                .fancytree-icon {
+                    filter: grayscale(1);
+                }
+            }
+
+            i.fancytree-icon.note {
+                display: inline-block;
+                width: 8px;
+                height: 8px;
+                background-color: rgb(34 190 107);
+                border-radius: 4px;
+            }
+
+            .fancytree-icon {
+                vertical-align: middle;
+            }
+            // icon end
+
+            span.fancytree-title {
+                padding: 0 3px;
+                margin-left: 6px;
+                font-size: 11px;
+                color: var(--title-color);
+
+                .zt-node-title {
+                    display: inline-block;
+                    white-space: nowrap;
+                    vertical-align: middle;
+
+                    &.alias {
+                        color: var(--title-with-alias-color);
+                    }
+                }
+
+                &.closed {
+                    .zt-node-alias {
+                        color: var(--alias-closed-color);
+                    }
+
+                    .zt-node-title {
+                        font-weight: normal;
+                        color: var(--title-closed-color);
+                    }
+                }
+
+                &:hover {
+                    //color: #e1e4e8;
+                    background-color: var(--title-hover-bg-color);
+                    border-radius: 4px;
+                }
+
+                .zt-node-splitter {
+                    color: var(--splitter-color);
+                }
+
+                span.zt-node-alias {
+                    font-weight: bold;
+                    vertical-align: middle;
+                }
+            }
+            // node-active
+            &.fancytree-active span.fancytree-title {
+                background-color: var(--title-active-bg-color) !important;
+                border-radius: 5px;
+                outline: 0;
+
+                &.closed {
+                    .zt-node-alias {
+                        color: var(--alias-active-color);
+                    }
+
+                    .zt-node-title.alias {
+                        color: var(--title-with-alias-active-color);
+                    }
+                }
+
+                .zt-node-title {
+                    color: var(--title-active-color);
+                }
+            }
+
+            &.tab-active {
+                .fancytree-title {
+                    font-weight: bold;
+                    color: var(--title-tab-active-color);
+                }
+
+                .zt-node-title.alias {
+                    color: var(--title-with-alias-tab-active-color);
+                }
+
+                &.fancytree-active {
+                    .zt-node-title {
+                        color: white;
+
+                        &.alias {
+                            font-weight: normal;
+                            color: white;
+                        }
+                    }
+
+                    .zt-node-alias {
+                        color: white;
+                    }
+                }
+            }
+
+            .zt-node-button-group {
+                position: absolute;
+                top: 0;
+                right: 0;
+                display: none;
+                height: 22px;
+                padding-left: 15px;
+                line-height: 22px;
+                //background:  linear-gradient(to left, rgb(255 255 255 / 100%) 75%, rgb(255 255 255 / 50%), rgb(255 255 255 / 0%));
+
+                .zt-node-btn {
+                    vertical-align: middle;
+                    cursor: pointer;
+                }
+            }
+
+            &:hover {
+                .zt-node-button-group {
+                    display: inline-block;
+                }
+            }
+
+            &.fancytree-focused span.fancytree-title {
+                background: 0;
+                outline: 0;
+            }
+        }
     }
 }
