[style] add style

--- a/src/tree/features/tab-master-tree/style.less
+++ b/src/tree/features/tab-master-tree/style.less
@@ -77,6 +77,7 @@ body {
     ul.fancytree-container {
         padding: 8px;
         margin-top: 50px;
+        margin-bottom: 40px;
         background-color: var(--content-bg-color);
         border: 0;
         outline: 0;
@@ -241,11 +242,17 @@ body {
             .fancytree-icon {
                 vertical-align: middle;
             }
+
+            img.fancytree-icon {
+                padding: 2px;
+                background-color: #33373d;
+                border-radius: 3px;
+            }
             // icon end
 
             span.fancytree-title {
-                padding: 0 3px;
-                margin-left: 6px;
+                padding: 0 5px;
+                margin-left: 5px;
                 font-size: 11px;
                 color: var(--title-color);
 
