--- a/src/styles/iconfont/iconfont.css
+++ b/src/styles/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
     font-family: 'iconfont'; /* Project id 3889192 */
-    src: url('iconfont.woff2?t=1676255058774') format('woff2'),
-        url('iconfont.woff?t=1676255058774') format('woff'),
-        url('iconfont.ttf?t=1676255058774') format('truetype');
+    src: url('iconfont.woff2?t=1676358295653') format('woff2'),
+        url('iconfont.woff?t=1676358295653') format('woff'),
+        url('iconfont.ttf?t=1676358295653') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
     font-style: normal;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-search:before {
+    content: '\e6e1';
 }
 
 .icon-minus_square:before {
