[style] modify search input style

--- a/src/tree/features/tab-master-tree/style.less
+++ b/src/tree/features/tab-master-tree/style.less
@@ -71,13 +71,12 @@ body {
         justify-content: center;
         width: 100%;
         height: 50px;
-        padding: 0 10px;
-        line-height: 50px;
         background: var(--header-bg-color);
         box-shadow: var(--header-shadow);
 
         .search-input {
             flex: 1;
+            margin: 0 10px;
         }
     }
 
