--- a/src/tree/features/search/search.less
+++ b/src/tree/features/search/search.less
@@ -17,14 +17,6 @@
         float: left;
         padding-right: 5px;
         color: white;
-
-        //&::after {
-        //    position: absolute;
-        //    right: -3px;
-        //    bottom: 0;
-        //    content: "|";
-        //}
-        //border-right: 1px solid white;
     }
 
     input.search {
@@ -41,7 +33,7 @@
         outline: 0;
 
         &::placeholder {
-            color: white;
+            color: rgb(130 133 140);
         }
     }
 }
