--- a/src/tree/features/tab-master-tree/style.less
+++ b/src/tree/features/tab-master-tree/style.less
@@ -18,7 +18,7 @@
     --title-match-color: black;
     --title-mismatch-color: #d9d9d9;
     --header-bg-color: rgb(242 244 245);
-    --header-shadow: 0 0 5px rgb(172 172 172 / 95%);
+    --header-border-bottom-color: #fff;
     --footer-bg-color: rgb(242 244 245);
     --footer-border-top-color: #cecece;
     --content-bg-color: #fff;
@@ -43,27 +43,42 @@
     --title-match-color: black;
     --title-mismatch-color: #d9d9d9;
     --header-bg-color: #18191b;
-    --header-shadow: 0 1px 2px rgb(57 57 57 / 95%);
+    --header-border-bottom-color: #3d3d3d;
     --footer-bg-color: rgb(31 32 34);
     --footer-border-top-color: rgb(31 32 34);
     --content-bg-color: #18191b;
     --title-hover-bg-color: rgb(41 39 42);
 }
 
+html::-webkit-scrollbar {
+    background-color: red;
+}
+
+#tree::-webkit-scrollbar-thumb {
+    background: blue;
+}
+
 body {
     position: relative;
+    height: 100vh;
     margin: 0;
+    overflow: hidden;
     font-family: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
         Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
         'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
     background-color: var(--content-bg-color);
 
+    #root {
+        height: 100%;
+    }
+
     .app {
         position: relative;
+        height: 100%;
     }
 
     #header {
-        position: fixed;
+        //position: fixed;
         top: 0;
         z-index: 9;
         display: flex;
@@ -72,7 +87,7 @@ body {
         width: 100%;
         height: 50px;
         background: var(--header-bg-color);
-        box-shadow: var(--header-shadow);
+        border-bottom: 1px solid var(--header-border-bottom-color);
 
         .search-input {
             flex: 1;
@@ -82,15 +97,27 @@ body {
 
     ul.fancytree-container {
         padding: 8px;
-        margin-top: 50px;
-        margin-bottom: 40px;
+        //margin-top: 50px;
+        //margin-bottom: 40px;
         background-color: var(--content-bg-color);
         border: 0;
         outline: 0;
     }
 
+    .tree-container {
+        display: flex;
+        flex-direction: column;
+        height: calc(100% - 50px - 40px);
+
+        #tree {
+            flex: 1;
+            height: 0;
+            overflow-x: hidden;
+            overflow-y: auto;
+        }
+    }
+
     #footer {
-        position: fixed;
         bottom: 0;
         z-index: 9;
         width: 100%;
@@ -123,8 +150,8 @@ body {
         // search END
 
         ul.fancytree-container {
-            overflow-x: hidden;
-            overflow-y: auto;
+            //overflow-x: hidden;
+            //overflow-y: auto;
 
             li {
                 background: 0;
