[style] add webkit scorllbar style

--- a/src/tree/features/tab-master-tree/style.less
+++ b/src/tree/features/tab-master-tree/style.less
@@ -50,12 +50,14 @@
     --title-hover-bg-color: rgb(41 39 42);
 }
 
-html::-webkit-scrollbar {
-    background-color: red;
+::-webkit-scrollbar {
+    width: 10px;
+    background-color: transparent;
 }
 
-#tree::-webkit-scrollbar-thumb {
-    background: blue;
+::-webkit-scrollbar-thumb {
+    background-color: rgb(39 39 39 / 50%);
+    border-radius: 50px;
 }
 
 body {
